Cleaning up build.sbt